Enhance testing IntelliJ-based graph building.